# django-tg

./: .dockerignore  .env.example  .env.save  .gitignore  Makefile  Taskfile.test.yml  Taskfile.tunnel.yml  Taskfile.yml  compose.dev.yaml  compose.test.yaml  compose.yaml  readme.md
app/: Dockerfile  celerybeat-schedule  oraculum_backup.json  pyproject.toml
app/cardparser/: admin.py  apps.py  models.py  tasks.py  utils.py
app/cardparser/bot/: parser.py
app/cardparser/migrations/: 0001_initial.py  0002_botsettings.py  0003_eventcaption.py  0004_alter_eventcaption_options_eventcaption_text_and_more.py  0005_producttemplate.py  0006_alter_producttemplate_template_and_more.py  0007_parseproduct_caption_data_alter_parseproduct_caption.py  0008_remove_eventcaption_caption_and_more.py
app/cardparser/services/: marketing_queryset.py  wb_link_builder.py
app/roster/: README.md  admin.py  models.py
app/roster/bot/: roster.py
app/roster/migrations/: 0001_initial.py  0002_seed_data.py  0003_userroll.py  0004_rolllimit.py  0005_seed_limits.py  0006_remove_card_image.py  0007_season_bot.py  0008_bottext.py  0009_seed_text.py  0010_alter_rolllimit_unique_together_rolllimit_is_premium_and_more.py  0011_remove_userroll_roster_user_user_id_946624_idx_and_more.py  0012_alter_rolllimit_limit_type.py  0013_rarityweight.py  0014_alter_bottext_text_type.py
app/roster/models/: limit.py  roll.py  (+2 more)
app/server/: settings.py  urls.py
app/tarot/: README.md  admin.py  messages.py  models.py  utils.py
app/tests/: conftest.py  test_cards.py  test_decks.py  test_oraculum.py  test_start_help.py  test_tarot_e2e.py
app/tg_bot/: admin.py  apps.py  builders.py  models.py  tasks.py  urls.py  views.py
(+215 files in other folders)
