[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["aarizona <ar.ariz.arizona@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.5"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
celery = {extras = ["asyncio", "redis"], version = "^5.4.0"}
redis = "^5.2.1"
gunicorn = "^23.0.0"
python-telegram-bot = "^21.10"
aiohttp = "^3.11.11"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
django-celery-beat = "^2.8.1"
django-celery-results = "^2.6.0"
django-admin-interface = "^0.30.1"
pillow = "^12.1.0"
curl-cffi = "^0.15.0"
openai = "^2.41.1"
tiktoken = "^0.13.0"
tenacity = "^9.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^0.24.0"
pytest-django = "^4.8.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "server.settings"
pythonpath = ["."]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = ["-v", "--tb=short"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"